Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -277,7 +277,7 @@
     }
    ],
    "source": [
-    "countries[4 :'USA']# add code here"
+    "countries[4] :'USA']# add code here"
    ]
   },
   {
