--- a/index.ipynb
+++ b/index.ipynb
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -294,11 +294,10 @@
        " 'Argentina',\n",
        " 'Italy',\n",
        " 'Canada',\n",
-       " 'South Korea',\n",
-       " 'Thailand']"
+       " 'South Korea']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
