--- a/index.ipynb
+++ b/index.ipynb
@@ -439,7 +439,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = set"
+    "unique_countries = set."
    ]
   },
   {
