--- a/index.ipynb
+++ b/index.ipynb
@@ -481,22 +481,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "-3"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "num_of_repeats = len(unique_countries) - l\n",
+    "num_of_repeats = len(countries)\n",
     "num_of_repeats # 3"
    ]
   },
